manifests/loxilb-ingress-deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: loxilb-ingress
    app.kubernetes.io/name: loxilb-ingress
  name: loxilb-ingress
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: loxilb-ingress
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: loxilb-ingress
      app.kubernetes.io/instance: loxilb-ingress
      app.kubernetes.io/name: loxilb-ingress
  template:
    metadata:
      name: loxilb-ingress
      labels:
        app: loxilb-ingress
        app.kubernetes.io/instance: loxilb-ingress
        app.kubernetes.io/name: loxilb-ingress
    spec:
      #hostNetwork: true
      #dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: loxilb-ingress
      containers:
      - name: loxilb-ingress
        volumeMounts:
          - mountPath: "/opt/loxilb/cert/"
            name: loxilb-ssl
        image: "ghcr.io/loxilb-io/loxilb-ingress:latest"
        imagePullPolicy: Always
        command: [ "/bin/loxilb-ingress" ]
        ports:
        - containerPort: 11111
        securityContext:
          privileged: true
        livenessProbe:
          httpGet:
            path: netlox/v1/config/loadbalancer/all
            port: 11111
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 5
      volumes:
        - name: loxilb-ssl
          secret:
            secretName: loxilb-ssl
